testsuite/poke.pkl/ior-diag-2.pk
/* { dg-do compile } */

var a = 23#B |
        2;  /* { dg-error "invalid operand.*\n.*expected offset" } */
